--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <meta http-equiv='pragma' content='no-cache'>
 <html>
 <h1> Website under construction</h1>
-<p style="background-color:#002fa7; color:blue;">@santiago</p>
+<p style="background-color:#002fa7; color:White;">@rawqo</p>
 </html>
 
