--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
-<meta http-equiv='cache-control' content='no-cache'> 
-<meta http-equiv='expires' content='0'> 
-<meta http-equiv='pragma' content='no-cache'>
 <html>
-<h1> Website under construction</h1>
-<p style="background-color:#002fa7; color:White;">@rawqo</p>
+<meta http-equiv='cache-control' content='no-cache'>
+<meta http-equiv='expires' content='0'>
+<meta http-equiv='pragma' content='no-cache'>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel='stylesheet' href='stylesheet.css'>
+<title>Santiago Vazquez</title>
+<body>
+<header>
+    <h1> Santiago Vazquez</h1>
+</header>
+    <!--<a href="https://github.com/rawqo/">Github</a>-->
+    <br>
+    <a href="./fixture-generator/index.html">Generador de fixture</a>
+    <br>
+    <img src="./files/gifs/sonic_running.gif" height="10%">
+</body>
+<footer>@rawqo</footer>
 </html>
-
