Correccion de error en link de linkedin.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p class="Carta-descripcion">El titulo lo dice todo.</p>
         </fieldset>
 
-        <fieldset class="Carta" id="Carta3" onclick="location.href = 'linkedin.com/in/santiagovazquez27/';">
+        <fieldset class="Carta" id="Carta3" onclick="location.href = 'https://linkedin.com/in/santiagovazquez27/';">
         <legend class="Carta-titulo">LinkedIn</legend>
         <p class="Carta-descripcion">Mi red social de trabajo.</p>
         </fieldset>
