--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         <div id="div-carta-sobremi">
             <fieldset class="Categoria">
                 <legend class="Categoria-titulo">Sobre Mi</legend>
+                <!--
+                <p>
+                    Mis hobbies:
+                    <label class="tag tag-2">Web</label>
+                    <label class="tag tag-4">Programacion</label>
+                    <label class="tag tag-1">Gamedev</label>
+                    <label class="tag tag-3">Electronica</label>
+                </p>
+                --->
                 <p>
                     Todavia estoy pensando en que poner aca. Si se te ocurre
                     algo, podes enviarme tu sugerencia al
@@ -125,15 +134,17 @@
             <div id="div-carta-extra">
                 <fieldset class="Categoria">
                     <legend class="Categoria-titulo">Extra</legend>
-                    <img src="./files/gifs/sonic_running.gif" />
+                    <img src="./files/img/characters/sonic.png" />
+                    <img src="./files/img/characters/shadow.png" />
+                    <h2>Pagina en construccion!</h2>
                     <p>
                         Esta pagina web esta creada con HTML, CSS y Javascript
                         en su forma mas pura. :)
                     </p>
-                    <p>
+                    <i>
                         Hacer click en cualquiera de las ventanas de color, te
                         redireccionara a su correspondiente sitio.
-                    </p>
+                    </i>
                 </fieldset>
             </div>
         </div>
