--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
     <body>
         <!--<a href="https://github.com/rawqo/">Github</a>-->
 
+        <div id="div-carta-importante">
+            <fieldset class="Categoria">
+                <legend class="Categoria-titulo">WIP</legend>
+                <img src="./files/img/characters/sonic.png" />
+                <img src="./files/img/characters/shadow.png" />
+                <h2>Pagina en construccion!</h2>
+                <p>
+                    Esta pagina web esta creada con HTML, CSS y Javascript
+                    en su forma mas pura. :)
+                </p>
+                <i>
+                    Hacer click en cualquiera de las ventanas de color, te
+                    redireccionara a su correspondiente sitio.
+                </i>
+            </fieldset>
+        </div>
+    </div>
+
+
         <!--Seccion sobre mi--->
         <div id="div-carta-sobremi">
             <fieldset class="Categoria">
@@ -134,17 +153,11 @@
             <div id="div-carta-extra">
                 <fieldset class="Categoria">
                     <legend class="Categoria-titulo">Extra</legend>
-                    <img src="./files/img/characters/sonic.png" />
-                    <img src="./files/img/characters/shadow.png" />
-                    <h2>Pagina en construccion!</h2>
-                    <p>
-                        Esta pagina web esta creada con HTML, CSS y Javascript
-                        en su forma mas pura. :)
-                    </p>
-                    <i>
-                        Hacer click en cualquiera de las ventanas de color, te
-                        redireccionara a su correspondiente sitio.
-                    </i>
+                    <div class="dot"></div>
+                    <div class="pelota tag-1"></div>
+                    <div class="pelota tag-2"></div>
+                    <div class="pelota tag-3"></div>
+                    <div class="pelota tag-4"></div>
                 </fieldset>
             </div>
         </div>
