cambios y agregado de fuentes

--- a/index.html
+++ b/index.html
@@ -150,14 +150,17 @@
                 </fieldset>
             </div>
             <!--Seccion extra--->
-            <div id="div-carta-extra">
-                <fieldset class="Categoria">
+            <div>
+                <fieldset class="Categoria" id="div-carta-extra">
                     <legend class="Categoria-titulo">Extra</legend>
+                    <!---
                     <div class="dot"></div>
+                    --->
                     <div class="pelota tag-1"></div>
                     <div class="pelota tag-2"></div>
                     <div class="pelota tag-3"></div>
                     <div class="pelota tag-4"></div>
+
                 </fieldset>
             </div>
         </div>
