pequenia restructuracion, todavia falta mas

--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
                 <a href="https://github.com/rawqo/">Github</a>
             </div>
         </div>
-
-        <!--Seccion comentarios--->
+        <br />
+        <div id="div-carta-proyectos" class="Categoria">
+            <div class="Carta">
+                <a href="./projects/projects.html">Proyectos</a>
+            </div>
+        </div>
     </body>
 </html>
