cambio de projects.html a index.html - 2

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <br />
         <div id="div-carta-proyectos" class="Categoria">
             <div class="Carta">
-                <a href="./projects/projects.html">Proyectos</a>
+                <a href="./projects/index.html">Proyectos</a>
             </div>
         </div>
     </body>
