--- a/projects/index.html
+++ b/projects/index.html
@@ -97,7 +97,7 @@
                         </table>
                     </a>
 
-                    <a class="Proyecto" href="./fixture-generator/index.html">
+                    <a class="Proyecto" href="">
                         <table>
                             <tr>
                                 <td>
@@ -121,7 +121,10 @@
                         </table>
                     </a>
 
-                    <a class="Proyecto" href="./fixture-generator/index.html">
+                    <a
+                        class="Proyecto"
+                        href="https://github.com/rawqo/dar-windows-app"
+                    >
                         <table>
                             <tr>
                                 <td>
